[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Player/player_controller.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Camera/camera_controller.gd" type="Script" id=2]
[ext_resource path="res://Fonts/debugFont.tres" type="DynamicFont" id=3]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 1, 0.811765, 1 )
metallic = 0.56
metallic_specular = 1.0
roughness = 0.0

[sub_resource type="PrismMesh" id=3]
subdivide_width = 3
subdivide_height = 3
subdivide_depth = 3

[sub_resource type="CapsuleShape" id=4]
radius = 0.5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.392157 )
border_width_left = 8
border_color = Color( 0, 0, 0, 0.392157 )

[node name="KinematicBody" type="KinematicBody"]
collision_layer = 32
script = ExtResource( 1 )
MAX_SPEED = 50.0

[node name="HelperVel" type="Spatial" parent="."]

[node name="VisualMesh" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="VisualMesh"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.00135803, 0.00493619, 0.00477114 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CSGMesh" type="CSGMesh" parent="VisualMesh"]
transform = Transform( 0.25, 0, 0, 0, -1.09278e-08, 0.25, 0, -0.25, -1.09278e-08, 0, 0.5, -0.6 )
mesh = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Rays" type="Spatial" parent="."]

[node name="RaycastCenter" type="RayCast" parent="Rays"]
enabled = true
cast_to = Vector3( 0, -1.25, 0 )

[node name="RaycastSnap" type="RayCast" parent="Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
enabled = true

[node name="RaycastFront" type="RayCast" parent="Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
enabled = true
cast_to = Vector3( 0, -1.25, 0 )

[node name="RaycastBack" type="RayCast" parent="Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
enabled = true
cast_to = Vector3( 0, -1.25, 0 )

[node name="RaycastLeft" type="RayCast" parent="Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
enabled = true
cast_to = Vector3( 0, -1.25, 0 )

[node name="RaycastRight" type="RayCast" parent="Rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
enabled = true
cast_to = Vector3( 0, -1.25, 0 )

[node name="SpringArm" type="SpringArm" parent="."]
spring_length = 5.0
script = ExtResource( 2 )
mouse_yaw_speed = 8.0
mouse_pitch_speed = 8.0
target_parent_path = NodePath("..")

[node name="Camera" type="Camera" parent="SpringArm"]
doppler_tracking = 1
current = true
fov = 90.0
near = 0.01
far = 150.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 9.0
margin_top = 10.0
margin_right = 388.0
margin_bottom = 178.0
custom_styles/normal = SubResource( 5 )
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "Testf"
__meta__ = {
"_edit_use_anchors_": false
}
